styles/resources.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Roboto:wght@100;400;500&display=swap');

* {
    box-sizing: border-box;
    margin: 0%;
    padding: 0%;
    font-family: 'Nunito', sans-serif;
    transition: 3s;
}

body {
    background-color: rgba(87, 75, 56, 0.7);
}

.showcase {
    position: absolute;
    right: 0;
    width: 100%;
    height: 100vh;
    padding: 100px;
    display: flex;
    justify-content: space-between;

    background-color: #111;
    color: #fff; 
    z-index: 2;
    transition: 0.5s;
}

.showcase header {
    position: absolute;
    top:0%;
    left: 0%;
    width: 100%;
    padding: 40px 100px;
    z-index: 1000;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.showcase.active {
    right: 300px
}

.logo {
    text-transform: uppercase;
    cursor: pointer;
}

.toggle {
    position: relative;
    width: 60px;
    height: 60px;
    background-image: url("/media/menu.png");
    background-size: 30px;
    background-repeat: no-repeat;
    background-position: center;
    cursor: pointer;
}

.toggle.active {
    background-image: url("/media/menu.png");
    background-size: 20px;
    background-repeat: no-repeat;
    background-position: center;
}

.showcase video {
    position: absolute;
    top:0%;
    left:0%;
    width: 100%;
    height: 100%;
    object-fit: cover;
    opacity: 0.8;
}

.content {
    position:relative;
    z-index: 10;
    color: #dfe4e6;
    top: 100px;
    width: 75%;
    margin-left: 30px;
}

.title {
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
    font-size: 55px;
    text-align: right;

    padding: 30px 20px 20px 20px;
}

.grid {
    text-align: center;

    padding-top: 20px;
    display: grid 1fr 1fr 1fr 1fr;
}

.card {
    height: 155px;
    width: 155px;
    margin-bottom: 5px;
    border: none;
    opacity: 0.6;
    font-size: 14px;
    transition: 0.4s;
}

.grid button:hover {
    cursor: pointer;
    opacity: 0.9;
    font-size: 20px;
    transition: 0.4s;
    font-weight: bold;
}

.menu {
    position: absolute;
    top: 0;
    right: 0;
    width: 300px;
    height:100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #dfe4e6;
}

.menu ul {
    position: relative;
    list-style: none;
}

.menu ul li a {
    text-decoration: none;
    font-size: 24px;
    color: #111;
    transition: 0.1s;
}

.menu ul li a:hover {
    color: #94acb4;
    transition: 0.1s;
}

